--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
      <modelVersion>4.0.0</modelVersion>
 
      <groupId>com.example</groupId>
-     <artifactId>java_project</artifactID>
+     <artifactId>java_project</artifactId>
      <version>1.0-SNAPSHOT</version>
 
      <dependencies>
